Fixed some bugs where text would be wrong color on mobile site

--- a/css/navbar-redesign.css
+++ b/css/navbar-redesign.css
@@ -157,11 +157,11 @@ body {
     }
 
     .p {
-        color: grey
+        color: white
     }
 
     .row {
-        color: grey
+        color: white
     }
     .row-bot {
         display: flex;
